--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,26 @@
 services:
   frontend:
-    build: ./frontend
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
     ports:
       - "8080:80"
     depends_on:
       - backend
+    environment:
+      - REACT_APP_API_URL=http://backend:3000/api
 
   backend:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
     env_file: .env
-    environment:
-      - NODE_ENV=${NODE_ENV}
-      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - db
 
   db:
     image: postgres:15-alpine
     env_file: .env
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
