--- a/backend/Dockerfile.backend
+++ b/backend/Dockerfile.backend
@@ -1,8 +1,14 @@
-FROM node:22-alpine
-
+FROM alpine/git AS clone
 WORKDIR /app
-COPY package.json ./
+RUN git clone https://github.com/gothinkster/node-express-realworld-example-app.git backend
+
+FROM node:18-alpine
+WORKDIR /app
+COPY --from=clone /app/backend .
 RUN npm install
-COPY . .
+
+ADD https://github.com/vishnubob/wait-for-it/raw/master/wait-for-it.sh /wait-for-it.sh
+RUN chmod +x /wait-for-it.sh
+
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD ["sh", "-c", "./wait-for-it.sh db:5432 --timeout=300 -- npm start"]
