--- a/backend/Dockerfile.backend
+++ b/backend/Dockerfile.backend
@@ -1,14 +1,16 @@
-FROM alpine/git AS clone
-WORKDIR /app
-RUN git clone https://github.com/gothinkster/node-express-realworld-example-app.git backend
+FROM node:22-alpine
 
-FROM node:18-alpine
-WORKDIR /app
-COPY --from=clone /app/backend .
-RUN npm install
+RUN apk add --no-cache bash
 
 ADD https://github.com/vishnubob/wait-for-it/raw/master/wait-for-it.sh /wait-for-it.sh
 RUN chmod +x /wait-for-it.sh
 
+WORKDIR /app
+
+RUN apk add --no-cache git && \
+    git clone https://github.com/gothinkster/node-express-realworld-example-app.git . && \
+    npm install && \
+    apk del git
+
 EXPOSE 3000
-CMD ["sh", "-c", "./wait-for-it.sh db:5432 --timeout=300 -- npm start"]
+CMD ["sh", "-c", "/wait-for-it.sh db:5432 --timeout=60 -- npm start"]
