--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,5 +11,8 @@ server {
     location /api {
         proxy_pass http://backend:3000;
         proxy_set_header Host $host;
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        proxy_connect_timeout 2s;
+        proxy_read_timeout 5s;
     }
 }
