--- a/backend/Dockerfile.backend
+++ b/backend/Dockerfile.backend
@@ -1,16 +1,24 @@
 FROM node:22-alpine
 
-RUN apk add --no-cache bash
+RUN apk add --no-cache \
+    bash \
+    openssl \
+    openssl1.1-compat \
+    ca-certificates \
+    libc6-compat \
+    && ln -s /lib/libc.musl-x86_64.so.1 /lib/ld-linux-x86-64.so.2
 
 ADD https://github.com/vishnubob/wait-for-it/raw/master/wait-for-it.sh /wait-for-it.sh
 RUN chmod +x /wait-for-it.sh
 
 WORKDIR /app
 
-RUN apk add --no-cache git && \
+RUN apk add --no-cache --virtual .build-deps git python3 make g++ && \
     git clone https://github.com/gothinkster/node-express-realworld-example-app.git . && \
     npm install && \
-    apk del git
+    npm install -g prisma && \
+    npx prisma generate && \
+    apk del .build-deps
 
 EXPOSE 3000
 CMD ["sh", "-c", "/wait-for-it.sh db:5432 --timeout=60 -- npm start"]
